# naivecgl-nvs

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
example/: convex_hull_2d.lua  draw_nurbs.lua  draw_solid_block.lua  enclosing_disc.lua  plane_dist.lua  tetrasphere.lua
lua/: naivecgl.lua  naivecgl_Array.lua  naivecgl_ArrayDouble.lua  naivecgl_ArrayInt32.lua  naivecgl_ArrayTriangle.lua  naivecgl_ArrayXY.lua  naivecgl_ArrayXYZ.lua  naivecgl_Class.lua  naivecgl_Curve.lua  naivecgl_Geometry.lua  naivecgl_NurbsCurve.lua  naivecgl_NurbsSurface.lua  naivecgl_Object.lua  naivecgl_Surface.lua  naivecgl_Triangle.lua  naivecgl_Triangulation.lua  naivecgl_XYZ.lua  naivecgl_common.lua  naivecgl_enum.lua  naivecgl_ffi.lua  naivecgl_geom2dapi.lua  naivecgl_tessellation.lua  naivecgl_util.lua
lua/naivecgl/: Array.lua  ArrayDouble.lua  ArrayTriangle.lua  ArrayXY.lua  ArrayXYZ.lua  Ax2_sf_t.lua  Body.lua  Class.lua  Curve.lua  Edge.lua  Face.lua  Fin.lua  Geom2dAPI.lua  Geometry.lua  Interval_t.lua  Logical_t.lua  Loop.lua  NurbsCurve.lua  NurbsCurve_sf_t.lua  NurbsSurface.lua  NurbsSurface_sf_t.lua  Object.lua  Plane.lua  Plane_sf_t.lua  Point.lua  Point_sf_t.lua  Surface.lua  Tessellation.lua  Topol.lua  Triangle.lua  Triangle_t.lua  Triangulation.lua  Vertex.lua  XY.lua  XYZ.lua  XYZ_t.lua  XY_t.lua  common_.lua  enum.lua  ffi_.lua  (+4 more)
