cmake_minimum_required(VERSION 3.20)

project(naivecgl-nvs VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(DEFINED ENV{INSTALL_DIR})
  set(CMAKE_INSTALL_PREFIX $ENV{INSTALL_DIR}/${PROJECT_NAME}/)
else()
  set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${PROJECT_VERSION}/)
endif()

file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/null.cpp "")

include(cmake/FetchNaiveCGL.cmake)

add_library(null SHARED ${CMAKE_CURRENT_BINARY_DIR}/null.cpp)

add_dependencies(null NaiveCGL)

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/lua/
  DESTINATION lua
  FILES_MATCHING PATTERN "*.lua"
  )

install(
  DIRECTORY ${naivecgl_BINARY_DIR}/src/$<CONFIG>/
  DESTINATION lib
  )